# YukawaScreening

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md
analysis/: pyproject.toml
analysis/critmin/: __init__.py
analysis/critmin/analysis/: adaptive_bond_valence.py  anion_valence.py  bond_valence.py  bond_valence_diagnostics.py  bond_valence_store.py  bond_valence_theory.py  bond_valence_tracking.py  bond_valence_yukawa.py  config.py  default_sources.py  payload_schema.py  shell_thermodynamics.py
analysis/critmin/viz/: bond_valence.py  manuscript.py  notebook_families.py  notebook_setup.py
analysis/notebooks/: thomas_fermi_screening.ipynb
analysis/scripts/: build_arxiv_submission.py  build_fair_metadata.py  check_manuscript_consistency.py  export_theory_lambda_tables.py  make_block_fit_line_atlases.py  make_bond_length_identity_parity_figure.py  make_characteristic_pair_summary_figure.py  make_charge_density_benchmark_figures.py  make_dblock_beta_prl_figure.py  nature_comms_plotstyle.mplstyle
data/charge_density/: mp_id_manifest.json
data/processed/theory/: charge_density_benchmark.json  dblock_oxi_unified_oxygen_theory.json  group12_unified_oxygen_theory.json  lambda_mixed_cation_holdout_prediction.csv  (+3 more)
metadata/: DATA_DICTIONARY.md  DATA_LICENSES.md  README.md  artifact_catalog.json
theory/: FIGURE_SOURCES.md  cover_letter.tex  cover_letter_draft.md  data_availability_statement.md  justification_paragraph.md  prl_main.tex  prl_supplemental.tex  references.bib  si_lambda_table.tex
theory/arxiv_submission/: README.txt
(+6 files in other folders)
